don't try to open apple double attachments as apple double, r=standard8, bug 579682, and don't make attachments disappear when apple double registered as content type